--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     ]
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.9.0",
+    "@chromatic-com/storybook": "^2.0.2",
+    "@storybook/addon-backgrounds": "^8.3.5",
     "@storybook/addon-essentials": "^8.3.5",
     "@storybook/addon-interactions": "^8.3.5",
     "@storybook/addon-links": "^8.3.5",
+    "@storybook/addon-mdx-gfm": "^8.3.5",
     "@storybook/addon-onboarding": "^8.3.5",
     "@storybook/blocks": "^8.3.5",
     "@storybook/preset-create-react-app": "^8.3.5",
